--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "postcss src/styles/tailwind.css -o app/static/css/tailwind.css --watch",
+    "dev": "concurrently \"npm run dev-css\" \"npm run flask-server\"",
+    "dev-css": "postcss src/styles/tailwind.css -o app/static/css/tailwind.css --watch",
+    "flask-server": "flask run --debug --host=0.0.0.0 --port=5001",
     "build": "postcss src/styles/tailwind.css -o app/static/css/tailwind.css"
   },
   "keywords": [],
@@ -13,10 +15,13 @@
   "dependencies": {
     "alpinejs": "^3.14.3",
     "autoprefixer": "^10.4.20",
+    "flowbite": "^2.5.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "concurrently": "^9.0.1",
     "postcss-cli": "^11.0.0"
   }
 }
